--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & npx next-video sync -w",
     "clean": "rimraf dist",
     "build": "next build",
     "start": "next start",
@@ -20,6 +20,7 @@
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
+    "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
