--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@madzadev/audio-player": "^2.1.13",
     "@prismicio/client": "^7.7.4",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
@@ -23,6 +24,7 @@
     "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.25.1"
