--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.5",
     "next-video": "^1.1.4",
     "react": "^18",
+    "react-audio-play": "^1.0.2",
     "react-dom": "^18",
     "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.2.1",
