--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev & npx next-video sync -w",
     "clean": "rimraf dist",
-    "build": "[my-framework] build --output public"
+    "build": "[my-framework] build --output public",
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine"
