--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "clean": "rimraf dist",
-    "build": "next build",
+    "clean": "rimraf .next",
+    "build": "next build --outdir dist",
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine"
