--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "clean": "rimraf .next",
-    "build": "next build",
+    "build": "next build public",
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine"
