--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-audio-play": "^1.0.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "@prismicio/client": "^7.7.4",
+    "@prismicio/next": "^1.6.0",
+    "@prismicio/react": "^2.8.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.25.1"
   },
